Read and store ST configuration in yaml
Signed-off-by: David Kornel <kornys@outlook.com>