@@ -4,8 +4,8 @@
  */
 package io.strimzi.systemtest;
 
-import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
 import io.fabric8.kubernetes.api.model.Service;
 import io.strimzi.systemtest.enums.ClusterOperatorInstallType;
 import io.strimzi.systemtest.utils.TestKafkaVersion;
@@ -19,8 +19,12 @@ import java.io.File;
 import java.io.IOException;
 import java.net.InetAddress;
 import java.net.UnknownHostException;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Collections;
 import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
@@ -35,7 +39,7 @@ public class Environment {
 
     private static final Logger LOGGER = LogManager.getLogger(Environment.class);
     private static final Map<String, String> VALUES = new HashMap<>();
-    private static final JsonNode JSON_DATA = loadConfigurationFile();
+    private static final Map<String, Object> YAML_DATA = loadConfigurationFile();
 
     /**
      * Specify the system test configuration file path from an environmental variable
@@ -258,6 +262,11 @@ public class Environment {
         VALUES.entrySet().stream()
                 .sorted(Map.Entry.comparingByKey())
                 .forEach(entry -> LOGGER.info(debugFormat, entry.getKey(), entry.getValue()));
+        try {
+            saveConfigurationFile();
+        } catch (IOException e) {
+            LOGGER.warn("Yaml configuration can't be saved");
+        }
     }
 
     public static boolean isOlmInstall() {
@@ -359,8 +368,8 @@ public class Environment {
     private static <T> T getOrDefault(String var, Function<String, T> converter, T defaultValue) {
         String value = System.getenv(var) != null ?
                 System.getenv(var) :
-                (Objects.requireNonNull(JSON_DATA).get(var) != null ?
-                        JSON_DATA.get(var).asText() :
+                (Objects.requireNonNull(YAML_DATA).get(var) != null ?
+                        YAML_DATA.get(var).toString() :
                         null);
         T returnValue = defaultValue;
         if (value != null) {
@@ -370,16 +379,37 @@ public class Environment {
         return returnValue;
     }
 
-    private static JsonNode loadConfigurationFile() {
-        config = System.getenv().getOrDefault(CONFIG_FILE_PATH_ENV,
-                Paths.get(System.getProperty("user.dir"), "config.json").toAbsolutePath().toString());
-        ObjectMapper mapper = new ObjectMapper();
+    private static void saveConfigurationFile() throws IOException {
+        Path logPath = Path.of(TEST_LOG_DIR);
+        Files.createDirectories(logPath);
+
+        LinkedHashMap<String, String> toSave = new LinkedHashMap<>();
+
+        VALUES.forEach((key, value) -> {
+            if (isWriteable(key, value)) {
+                toSave.put(key, value);
+            }
+        });
+
+        ObjectMapper mapper = new ObjectMapper(new YAMLFactory());
+        mapper.writerWithDefaultPrettyPrinter().writeValue(logPath.resolve("config.yaml").toFile(), toSave);
+    }
+
+    private static Map<String, Object> loadConfigurationFile() {
+        String config = System.getenv().getOrDefault(CONFIG_FILE_PATH_ENV,
+                Paths.get(System.getProperty("user.dir"), "config.yaml").toAbsolutePath().toString());
+        ObjectMapper mapper = new ObjectMapper(new YAMLFactory());
         try {
-            File jsonFile = new File(config).getAbsoluteFile();
-            return mapper.readTree(jsonFile);
+            return mapper.readValue(new File(config), Map.class);
         } catch (IOException ex) {
-            LOGGER.debug("JSON configuration is not provided or cannot be processed!");
-            return mapper.createObjectNode();
+            LOGGER.info("Yaml configuration not provider or not exists");
+            return Collections.emptyMap();
         }
+    }
+
+    private static boolean isWriteable(String var, String value) {
+        return !value.equals("null")
+                && !var.equals(CONFIG_FILE_PATH_ENV)
+                && !var.equals("USER");
     }
 }
